--- a/index.html
+++ b/index.html
@@ -3,17 +3,17 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Prototipos Pep Solitaire</title>
+  <title>Practico 1 Interfaces de usuario</title>
 </head>
 <body>
   <h1>Prototipos de Pep Solitaire</h1>
 
   <button onclick="window.open('URL_EDITOR', '_blank')">
-    Modo EDICIÓN
+    EDICIÓN
   </button>
 
   <button onclick="window.open('URL_PRESENTACION', '_blank')">
-    Modo PRESENTACIÓN
+    PRESENTACIÓN
   </button>
 </body>
 </html>
