--- a/index.html
+++ b/index.html
@@ -6,14 +6,21 @@
   <title>Practico 1 Interfaces de usuario</title>
 </head>
 <body>
-  <h1>Prototipos de Pep Solitaire</h1>
+    <h2>Integrantes</h2>
+  <ul>
+    <li>Arrachea Graziano Tiago</li>
+    <li>Sadi Emanuel</li>
+    <li>Lospinoso Martín</li>
+  </ul>
 
-  <button onclick="window.open('URL_EDITOR', '_blank')">
+
+    <button onclick="window.open('https://www.figma.com/design/jm4w6hgCR7Sxuu04rgTQZ5/TP-P1?node-id=1-2&m=dev&t=wC3W5k4oWc1PcjcX-1', '_blank')">
     EDICIÓN
   </button>
 
-  <button onclick="window.open('URL_PRESENTACION', '_blank')">
+  <button onclick="window.open('https://www.figma.com/proto/jm4w6hgCR7Sxuu04rgTQZ5/TP-P1?node-id=47-330&p=f&t=bOszIYT1AnHhJDi7-1&scaling=contain&content-scaling=fixed&page-id=1%3A2', '_blank')">
     PRESENTACIÓN
   </button>
+
 </body>
 </html>
