--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
   </ul>
 
 
-    <button onclick="window.open('https://www.figma.com/design/jm4w6hgCR7Sxuu04rgTQZ5/TP-P1?node-id=1-2&m=dev&t=wC3W5k4oWc1PcjcX-1', '_blank')">
+    <button onclick="window.open('https://www.figma.com/design/jm4w6hgCR7Sxuu04rgTQZ5/TP-P1?node-id=1-2&m=dev&t=FMU8QzNGb0YKnFGF-1')">
     EDICIÓN
   </button>
 
-  <button onclick="window.open('https://www.figma.com/proto/jm4w6hgCR7Sxuu04rgTQZ5/TP-P1?node-id=47-330&p=f&t=bOszIYT1AnHhJDi7-1&scaling=contain&content-scaling=fixed&page-id=1%3A2', '_blank')">
+  <button onclick="window.open('https://www.figma.com/proto/jm4w6hgCR7Sxuu04rgTQZ5/TP-P1?node-id=1-2&t=FMU8QzNGb0YKnFGF-1')">
     PRESENTACIÓN
   </button>
 
